rainer booking page card remove & img padding issue & button alignment & card social media icon center to grid & welcome msg breakpoint fixed

--- a/public/assets/scss/custom/custom.scss
+++ b/public/assets/scss/custom/custom.scss
@@ -8,7 +8,7 @@ $sidebar-width-left: 105px;
 $navbar-height-top: 85px;
 $canvas-z-index: 8;
 
-.react-datepicker-popper{
+.react-datepicker-popper {
   z-index: 12 !important;
 }
 
@@ -227,11 +227,9 @@ $canvas-z-index: 8;
   object-fit: cover;
 }
 
-@media (min-aspect-ratio: 16/9) {
-}
+@media (min-aspect-ratio: 16/9) {}
 
-@media (max-aspect-ratio: 16/9) {
-}
+@media (max-aspect-ratio: 16/9) {}
 
 video {
   // object-fit: fill;
@@ -382,6 +380,7 @@ slick-slider .slick-list,
 .react-tiny-popover-container {
   z-index: $canvas-z-index + 999 !important;
 }
+
 .rotate-90 {
   rotate: 90deg;
 }
@@ -534,6 +533,7 @@ slick-slider .slick-list,
 
 // button margin
 @media (max-width: 576px) {
+
   // .btn.ml-4 {
   .btnbook {
     margin-top: 10px !important;
@@ -544,6 +544,7 @@ slick-slider .slick-list,
 
 // booking slot
 @media (max-width: 576px) {
+
   // .btn.ml-4 {
   .slot {
     justify-content: end !important;
@@ -691,7 +692,8 @@ slick-slider .slick-list,
 
 .trainer-profile {
   width: 348px;
-  margin-top: 12px;
+  // margin-top: 12px;
+  margin: 12px;
   height: auto;
   min-height: 200px;
   min-width: 80px;
@@ -712,8 +714,37 @@ slick-slider .slick-list,
   font-family: "Roboto";
   margin: 26px 0;
   font-weight: 300;
+
+  @media (max-width: 576px) {
+    font-size: 22px !important;
+  }
 }
+
 .trainer-bookings-card {
   border-radius: 16px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
+.card-trainer {
+  padding: 6% !important;
+  float: left !important;
+
+  @media (max-width: 576px) {
+    padding: 13% !important;
+    margin-left: 18px !important;
+  }
+}
+
+.button-booking {
+  @media (max-width: 539px) {
+    margin-top: 8px !important;
+    left: -8% !important;
+  }
+}
+
+.small-screen {
+  @media (max-width: 539px) {
+    display: block !important;
+  }
+}
+
